--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,11 +3,12 @@
     <h1>
       <%= link_to "就活カレンダー", root_path, id: "logo", class: "glyphicon glyphicon-calendar" %>
     </h1>
-    <div class="dropdown background-dark">
-      <button class="btn dropdown-toggle menu-button" type="button" data-toggle="dropdown" aria-expanded="false">
+    <div class="btn-group dropdown menu-button">
+      <button class="btn dropdown-toggle background-dark" type="button" id="menu-button" data-toggle="dropdown"
+                                                      aria-haspopup="true" aria-expanded="false">
         <%= render 'layouts/hamburger-icon' %>
 	    </button>
-      <ul class="dropdown-menu">
+      <ul class="dropdown-menu background-dark dropdown-menu-right" aria-labelledby="menu-button">
         <li>a</li>
         <li>a</li>
         <li>a</li>
