--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -14,6 +14,11 @@ body {
   background-color: $dark;
 }
 
+.background-dark li a{
+  color: white;
+  text-decoration: none;
+}
+
 /* header */
 #logo{
   float: left;
@@ -35,4 +40,22 @@ body {
 .menu-button{
   float: right;
   background-color: $dark;
+}
+
+/* root page */
+.content{
+  align-content: center;
+}
+
+#title{
+  text-align: center;
+}
+
+.login-card{
+  position: relative;
+  margin: 40px auto;
+  padding: 20px 40px 40px;
+  text-align: center;
+  background: #fff;
+  border: 1px solid #ccc;
 }
