--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8 col-md-6 col-md-offset-3">
+      <div class="card login-card">
+        <h1 id="title">就活カレンダー</h1>
+        <%#= render 'form' %>
+      </div>
+    </div>
+  </div>
+</div>
