--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -49,13 +49,29 @@ body {
 
 #title{
   text-align: center;
+  margin: 40px auto;
 }
 
 .login-card{
   position: relative;
   margin: 40px auto;
-  padding: 20px 40px 40px;
-  text-align: center;
+  padding: 0px 40px 40px;
   background: #fff;
   border: 1px solid #ccc;
+}
+
+/* form */
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
 }
