--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-8 col-md-6 col-md-offset-3">
-      <div class="card login-card">
-        <h1 id="title">就活カレンダー</h1>
-        <%#= render 'form' %>
-      </div>
+<% provide(:button_text, 'アカウント作成') %>
+<% provide(:url, signup_path) %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="card login-card">
+      <h1 id="title">就活カレンダー</h1>
+      <%= render 'form' %>
     </div>
   </div>
 </div>
