--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <div class="card login-card">
-      <h1 id="title">就活カレンダー</h1>
+      <h1 id="title">アカウント作成</h1>
       <%= render 'form' %>
     </div>
   </div>
