Implement log-in

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         <%= render 'layouts/hamburger-icon' %>
 	    </button>
       <ul class="dropdown-menu dropdown-menu-right background-dark" aria-labelledby="menu-button">
-        <li><%= link_to "Log in", '#' %></li>
+        <li><%= link_to "Log in", root_path %></li>
         <li><%= link_to "Sign up", signup_path %></li>
       </ul>
     </div>
