--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -79,3 +79,12 @@ body {
 .btn-block{
   margin: 10pt auto;
 }
+
+#session_remember_me {
+  width: auto;
+  margin-left: 0;
+}
+
+.checkbox span{
+  margin-left: 20px;
+}
