Add password reset

--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,7 @@
-User#password_reset
+<%= @user.name %> 様
 
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+以下のリンクをクリックしてパスワードをリセットしてください。
+
+<%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
+
+このメールに心当たりがない場合、 お手数ですが本メールをそのまま削除ください。
