--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,11 @@
-<h1>User#password_reset</h1>
+<h1>パスワードリセット</h1>
 
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<p><%= @user.name %> 様</p>
+
+<p>以下のリンクをクリックしてパスワードをリセットしてください。</p>
+
+<%= link_to "パスワードをリセットする", edit_password_reset_url(@user.reset_token,
+                                                    email: @user.email) %>
+
+<p>このメールに心当たりがない場合、 お手数ですが本メールをそのまま削除ください。</p>
+
