--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -13,7 +13,7 @@
         <%= f.label :password_confirmation, "新しいパスワード(確認用)" %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       
-        <%= f.submit "確認メールを送信", class: "btn btn-primary btn-block" %>
+        <%= f.submit "パスワードを更新", class: "btn btn-primary btn-block" %>
       <% end %>
     </div>
   </div>
