--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-6 col-md-offset-3">
     <div class="card login-card">
       <h1 id="title">パスワードリセット</h1>
-      <%= form_for(@user, url: password_resets_path(params[:id])) do |f| %>        
+      <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>        
         <%= render 'shared/error_messages', object: f.object %>
 
         <%= hidden_field_tag :email, @user.email %>
