Remove link to edit account

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
 	    </button>
       <ul class="dropdown-menu dropdown-menu-right background-dark" aria-labelledby="menu-button">
         <% if logged_in? %>
-          <li><%= link_to "パスワードの変更", edit_user_path(current_user) %></li>
+          <!--<li><%= link_to "パスワードの変更", edit_user_path(current_user) %></li>-->
           <li class="divider"></li>
           <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
         <% else %>
