--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -25,7 +25,7 @@ body {
   font-weight: bold;
   color: white;
   font-size: 0.9em;
-  letter-spacing: -1px;
+  letter-spacing: -1px !important;
   padding-top: 0px;
   text-decoration: none;
 }
@@ -116,12 +116,29 @@ thead{
   background-color: lightblue;
 }
 
+/* sidebar */
 .sidebar{
   padding-top: 10px;
+}
+
+.sidebar-creates{
+  margin-top: 5px;
 }
 
 .side-business{
   padding-top: 30px;
 }
 
+/* business */
+.business-name{
+  width: 75%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+}
 
+.business-my_page{
+  padding-left: 10px;
+}
