--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -1,31 +1,19 @@
 <nav class="col-md-2 hidden-sm hidden-xs sidebar">
-  <button type="button" class="btn btn-primary glyphicon glyphicon-plus" data-toggle="modal" data-target="#scheduleModal">
-    予定の追加
+  <button type="button" class="btn btn-success glyphicon glyphicon-plus sidebar-creates">
+    予定を追加
   </button>
+  <button type="button" class="btn btn-success glyphicon glyphicon-plus sidebar-creates" data-toggle="modal" data-target="#businessModal">
+    企業を追加
+  </button>
+
   <ul class="nav nav-pills nav-stacked side-business">
-    <li role="presentation" class="<%= 'active' if current_page == "calendar" %>">
-      <a href="#">カレンダー</a>
+    <li role="presentation" class="<%= 'active' if params[:current_page] != "business" %>">
+      <%= link_to "カレンダー", user_path(@user, current_page: "calendar", current_month: params[:current_month]) %>
     </li>
-    <li role="presentation" class="<%= 'active' if current_page == "business" %>">
-      <a href="#">企業管理</a>
+    <li role="presentation" class="<%= 'active' if params[:current_page] == "business" %>">
+      <%= link_to "企業管理", user_path(@user, current_page: "business", current_month: params[:current_month]) %>
     </li>
   </ul>
-  
-  <!-- schedule modal -->
-  <div class="modal fade" id="scheduleModal" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-          <h4 class="modal-title">タイトル</h4>
-        </div>
-        <div class="modal-body">
-          本文
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary">作成</button>
-        </div>
-      </div>
-    </div>
-  </div>
 </nav>
+
+<%= render 'shared/modal_create-business' %>
