Implement actions of business

--- a/app/views/businesses/_business.html.erb
+++ b/app/views/businesses/_business.html.erb
@@ -1,14 +1,16 @@
-<div id="business-<%= business.id %>" class="col-md-4 business">
-  <div class="panel panel-default">
-    <div class="panel-heading clearfix">
-      <%= link_to business.name, business, class: " pull-left business-name" %>
-      <span class="pull-right">
-        <span class="business-web_site"><%= link_to "", link_not_nil(business.web_site), class: "glyphicon glyphicon-home", title: "企業ページ" %></span>
-        <span class="business-my_page"><%= link_to "", link_not_nil(business.my_page), class: "glyphicon glyphicon-user", title: "マイページ" %></span>
-      </span>
-    </div>
-    <div class="panel-body">
-      aaaaaa
+<% if !business.id.nil? %>
+  <div id="business-<%= business.id %>" class="col-md-4 business">
+    <div class="panel panel-default">
+      <div class="panel-heading clearfix">
+        <%= link_to business.name, edit_business_path(business), class: "pull-left business-name" %>
+        <span class="pull-right">
+          <span class="business-web_site"><%= link_to "", link_not_nil(business.web_site), class: "glyphicon glyphicon-home", title: "企業ページ", target: :_blank %></span>
+          <span class="business-my_page"><%= link_to "", link_not_nil(business.my_page), class: "glyphicon glyphicon-user", title: "マイページ" , target: :_blank %></span>
+        </span>
+      </div>
+      <div class="panel-body">
+        aaaaaa
+      </div>
     </div>
   </div>
-</div>
+<% end %>
