--- a/app/views/businesses/_modal_create-business.html.erb
+++ b/app/views/businesses/_modal_create-business.html.erb
@@ -21,10 +21,10 @@
           <%= f.text_field :address, class: 'form-control' %>
           
           <%= f.label :details, "企業情報:" %>
-          <%= f.text_area :details, class: 'form-control' %>
+          <%= f.text_area :details, rows: 3, class: 'form-control' %>
           
           <%= f.label :memo, "メモ:" %>
-          <%= f.text_area :memo, class: 'form-control' %>
+          <%= f.text_area :memo, rows: 3, class: 'form-control' %>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
