--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -21,7 +21,7 @@
           <%= f.label :my_page, "マイページ URL:" %>
           <div class="form-inline">
             <%= f.text_field :my_page, class: 'form-control', value: @business.my_page %>
-            <%= f.button '移動', type: :submit, class: "btn btn-primary", name: "submit_url", value: "my_page", title: "マイページ（このタブで開かれます）"  %>
+            <%= f.button '移動', type: :submit, class: "btn btn-primary form-control", name: "submit_url", value: "my_page", title: "マイページ（このタブで開かれます）"  %>
           </div>
           
           <%= f.label :address, "所在地:" %>
@@ -45,6 +45,7 @@
       <% end %>
     </div>
     <div class=" col-md-6">
+      <%= render @schedules %>
     </div>
   </div>
 </div>
