--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,8 +10,8 @@
 	    </button>
       <ul class="dropdown-menu dropdown-menu-right background-dark" aria-labelledby="menu-button">
         <% if logged_in? %>
-          <li><%= link_to "カレンダー", user_path(current_user, current_page: "calendar", current_month: params[:current_month]) %></li>
-          <li><%= link_to "企業管理", user_path(current_user, current_page: "business", current_month: params[:current_month]) %></li>
+          <li><%= link_to "カレンダー", user_path(current_user, current_month: params[:current_month]) %></li>
+          <li><%= link_to "企業管理", businesses_path %></li>
           <li class="divider"></li>
           <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
         <% else %>
