Add schedule-edit, schedule-delete, ammend header

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -114,7 +114,7 @@ table{
 
 .none-border{
   border: none!important;  
-  min-height: 10px!important;}
+  height: 10px!important;}
 
 .none-padding{
   padding: 0px!important;  
