--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -1,37 +1,37 @@
 <div class="row">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="text-center"><%= @business.name %></h3>
+      <h3 class="text-center"><%= @current_business.name %></h3>
       <%= link_to "戻る", businesses_path, class:"btn btn-secondary glyphicon glyphicon-chevron-left" %>
     </div>
     <div class="col-md-6">
-      <%= form_for(@business, html: { class: "form-horizontal" }) do |f| %>
+      <%= form_for(@current_business, html: { class: "form-horizontal" }) do |f| %>
         <div class="panel-body">
           <%= render 'shared/error_messages', object: f.object %>
           
           <%= f.label :name, "企業名(必須):" %>
-          <%= f.text_field :name, class: 'form-control', value: @business.name, placeholder: "企業名（必須）" %>
+          <%= f.text_field :name, class: 'form-control', value: @current_business.name, placeholder: "企業名（必須）" %>
           
           <%= f.label :web_site, "企業ページ URL:" %>
           <div class="form-inline">
-            <%= f.text_field :web_site, class: "form-control", vallue: @business.web_site, placeholder: "企業ページ" %>
+            <%= f.text_field :web_site, class: "form-control", vallue: @current_business.web_site, placeholder: "企業ページ" %>
             <%= f.button '移動', type: :submit, class: "btn btn-primary form-control", name: "submit_url", value: "web_site", title: "企業ページ（このタブで開かれます）" %>
           </div>
           
           <%= f.label :my_page, "マイページ URL:" %>
           <div class="form-inline">
-            <%= f.text_field :my_page, class: 'form-control', value: @business.my_page, placeholder: "マイページ" %>
+            <%= f.text_field :my_page, class: 'form-control', value: @current_business.my_page, placeholder: "マイページ" %>
             <%= f.button '移動', type: :submit, class: "btn btn-primary form-control", name: "submit_url", value: "my_page", title: "マイページ（このタブで開かれます）"  %>
           </div>
           
           <%= f.label :address, "所在地:" %>
-          <%= f.text_field :address, class: 'form-control', value: @business.address, placeholder: "所在地" %>
+          <%= f.text_field :address, class: 'form-control', value: @current_business.address, placeholder: "所在地" %>
           
           <%= f.label :details, "企業情報:" %>
-          <%= f.text_area :details, rows: 10, class: 'form-control', value: @business.details, placeholder: "企業情報" %>
+          <%= f.text_area :details, rows: 10, class: 'form-control', value: @current_business.details, placeholder: "企業情報" %>
           
           <%= f.label :memo, "メモ:" %>
-          <%= f.text_area :memo, rows: 15, class: 'form-control', value: @business.memo, placeholder: "メモ" %>
+          <%= f.text_area :memo, rows: 15, class: 'form-control', value: @current_business.memo, placeholder: "メモ" %>
         </div>
         <div class="panel-footer clearfix">
           <div class="pull-left">
